k8s/deployment/celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestionhydro-celery
  labels:
    app: gestionhydro-celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestionhydro-celery
  template:
    metadata:
      labels:
        app: gestionhydro-celery
    spec:
      imagePullSecrets:
        - name: otace
      containers:
        - name: celery-worker
          image: registry.digitalocean.com/otace/gestionhydro-amd64:latest
          imagePullPolicy: Always
          command: [ "/bin/sh", "-c", "celery -A hydrocarbures worker --loglevel=info" ]
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
