k8s/deployment/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestionhydro-deployment
  labels:
    app: gestionhydro-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gestionhydro-deployment
  template:
    metadata:
      labels:
        app: gestionhydro-deployment
    spec:
      imagePullSecrets:
        - name: otace
      containers:
        - name: django-server
          image: registry.digitalocean.com/otace/gestionhydro-amd64:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          command: [ "/bin/sh", "-c", "gunicorn hydrocarbures.wsgi --bind 0.0.0.0:8000 --worker-tmp-dir /dev/shm" ]
#        - name: celery-worker
#          image: registry.digitalocean.com/otace/gestionhydro-amd64:latest
#          imagePullPolicy: Always
#          envFrom:
#            - secretRef:
#                name: django-deploy-env
#          command: [ "/bin/sh", "-c", "celery -A hydrocarbures worker --loglevel=info" ]
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-configmap
