k8s/deployment/django.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-celery
spec:
  containers:
    - name: django-server
      image: otace1/gestionhydro:latest
      ports:
        - containerPort: 8000
      volumeMounts:
        - name: static-volume
          mountPath: /vol/web/static
        - name: media-volume
          mountPath: /vol/web/media
        - name: db-data
          mountPath: /var/lib/mysql
      command: ["/bin/sh", "-c", "python manage.py collectstatic --noinput; python manage.py makemigrations --noinput; python manage.py migrate --noinput; python manage.py migrate django_celery_results; gunicorn hydrocarbures.wsgi --bind 0.0.0.0:8000 --worker-tmp-dir /dev/shm"]
    - name: celery-server
      image: otace1/gestionhydro:latest
      volumeMounts:
        - name: static-volume
          mountPath: /vol/web/static
        - name: media-volume
          mountPath: /vol/web/media
        - name: db-data
          mountPath: /var/lib/mysql
      command: ["/bin/sh", "-c", "celery -A hydrocarbures worker --loglevel=info --concurrency 4 -E"]
  volumes:
    - name: static-volume
      persistentVolumeClaim:
        claimName: static-pvc
    - name: media-volume
      persistentVolumeClaim:
        claimName: media-pvc
    - name: db-data
      persistentVolumeClaim:
        claimName: database-pvc
