k8s/deployment/flower.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flower-server
  labels:
    app: flower-server
spec:
  containers:
    - name: flower
      image: mher/flower
      imagePullPolicy: Never
      ports:
        - containerPort: 5555
      command: ["/bin/sh", "-c", "celery --broker=redis://redis:6379 flower"]
