k8s/deployment/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-deployment
  template:
    metadata:
      labels:
        app: nginx-deployment
    spec:
      containers:
        - name: nginx-proxy
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf  # Specify the subPath here
            - name: static-volume
              mountPath: /vol/web/static
            - name: media-volume
              mountPath: /vol/web/media
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-configmap
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: static-volume
          persistentVolumeClaim:
            claimName: static-pvc
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-pvc
