k8s/deployment/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: ClusterIP
  selector:
    app: gestionhydro-deployment
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: redis-service
#spec:
#  type: ClusterIP
#  selector:
#    app: gestionhydro-deployment
#  ports:
#    - protocol: TCP
#      port: 6379
#      targetPort: 6379
